Added support for GearVR & Carmel browser
Can launch via Open in GearVR button

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 
   <body>
     <div class="scene-container" style="height: 100%; width: 100%"></div>
+    <div id="ovr-button" class="ovr-button" style="position: fixed; bottom: 20px; left: 20px;"><a href="javascript:window.location.href='ovrweb:'+window.location.href">Open in GearVR</a></div>
+
     <script>
     <!--
     document.write('<script src="http://' + document.location.hostname + ':9090/bundle.js"></script>');
