Added Origin Trial Token

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>A-Frame React Boilerplate</title>
+    <!-- Origin Trial Token, feature = WebVR, origin = https://hazardu5.github.io, expires = 2017-03-01 -->
+    <meta http-equiv="origin-trial" data-feature="WebVR" data-expires="2017-03-01" content="AuNyc/wATM4a1lidUVH/Z20rLG9DVZY2mfRXWJkRb3BZADX7yvV2ZZb8WvubBsHC52NOUEnQRTvYEpSzU1JutAgAAABWeyJvcmlnaW4iOiAiaHR0cHM6Ly9oYXphcmR1NS5naXRodWIuaW86NDQzIiwgImZlYXR1cmUiOiAiV2ViVlIiLCAiZXhwaXJ5IjogMTQ4ODM3NjcwOH0=">
   </head>
 
   <body>
